--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             					<td>LIGASLOT777</td>	
             					<td class="d-none d-sm-table-cell">25,000</td>
             					<td class="d-none d-sm-table-cell">20%</td>
-            					<td><a href="https://ligaslot777.com/?action=register&rc=1LBYPX4402&ci=11" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://ligaslot777.xyz/?action=register&rc=1LBYPX4402&ci=11" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 							<tr>
             					<td>788BOLA</td>
